deployments/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: grafana
  namespace: grafana
spec:
  tls:
  - hosts:
    - graf.thewindgod.com
    secretName: grafana-tls
  rules:
  - host: graf.thewindgod.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
